syntax = "proto3";

package go.micro.service.user;
option go_package = "./proto/user;user";

service User {
  rpc Register(UserRegisterRequest) returns (UserRegisterResponse){}
  rpc Login(UserLoginRequest) returns(UserLoginResponse){}
  rpc GetUserInfo(UserInfoRequest) returns (UserInfoResponse){}
}


message  UserInfoRequest{
  string user_name = 1;
}


message UserInfoResponse{
  int64 user_id = 1;
  string user_name = 2;
  string first_name = 3;
}

message UserRegisterRequest{
  string user_name = 1;
  string first_name = 2;
  string  pwd = 3;
}

message UserRegisterResponse{
  string msg = 1;
}

message UserLoginRequest{
  string user_name = 1;
  string  pwd = 2;
}
message UserLoginResponse{
  bool is_success = 1;
}



